# agentic_orchestrator

./: .gitignore  README.md  embed_md_pipeline.py  main.py  mcp_server.py  parameter.yaml  pyproject.toml
RAG/: embed_artifacts.py
Readme_content/: Query A.txt  Query B.txt  Query C1.txt  Query C2.txt  Query D.txt  Query E.txt  Query F.txt  Query F2.txt  Query G.txt  Query H.txt  RL_Q_1.txt  RL_Q_2.txt  RL_Q_3.txt  RL_Q_4.txt  RL_Q_5.txt
agentic/: README.md  action.py  agent.py  decision.py  memory.py  perception.py  schemas.py
llm_gatewayV3/: main.py  providers.py  router.py  schemas.py
llm_gatewayV3/tests/: test_all_providers.py
sandbox/: .gitignore  birthday_reminder.txt  calendar_reminder_two_weeks_before_20260501.txt  calendar_reminders.txt  gemini_2_0_release_date.txt  gemini_2_release_date_fact.txt  mom_birthday_reminders.txt
sandbox/artifacts/: .gitignore
sandbox/artifacts/state/: 20260523_181901_durable_fact.json  20260523_194526_durable_fact.json  20260523_195315_durable_fact.json  20260523_195440_durable_fact.json  20260523_195515_durable_fact.json  20260523_195648_durable_fact.json  20260523_195716_durable_fact.json  20260523_195735_durable_preference.json  20260523_200001_durable_fact.json  durable_state.json
sandbox/indices/: raw_output_read_file.faiss  raw_output_read_file.json
sandbox/ingested/: attention.json
